add_subdirectory(ark)
add_subdirectory(kcalc)
add_subdirectory(kfloppy)
add_subdirectory(kgpg)
add_subdirectory(ktimer)
add_subdirectory(kwallet)
add_subdirectory(okteta)
add_subdirectory(superkaramba)

if (UNIX)
   add_subdirectory(kdf)
   add_subdirectory(kcontrol)
   add_subdirectory(kcharselect)
   add_subdirectory(kdelirc)
endif (UNIX)	
